# IEEE-PCB-Workshop-Resources-2025

./: README.md
Libraries/: IEEE_PCB_Workshop_Library_SP25.LibPkg  IEEE_Workshop_Footprints.PcbLib  IEEE_Workshop_Schematic_Symbols.SchLib  README.md
Week01/: Complete.SchDoc  README.md
Week01/Design Files/: Complete.SchDoc  Power Supply.PrjPcb  Unrouted.SchDoc
Week02/: README.md
Week02/Design Files - Power Supply/: Complete.PcbDoc  Power_Supply.PrjPcb  Power_Supply.SchDoc  Unrouted.PcbDoc
Week02/Design Files - Power Supply - KiCAD/Power Supply Complete/: Power Supply Complete-altium-import.kicad_sym  Power Supply Complete.kicad_pcb  Power Supply Complete.kicad_prl
Week02/Design Files - Power Supply - KiCAD/Power Supply Unrouted/: Power Supply Unrouted.kicad_pcb  Power Supply Unrouted.kicad_pro  Power Supply Unrouted.kicad_sch  sym-lib-table
Week03/: README.md
Week04/: README.md
Week05/: README.md
Week06/: README.md
Week07/: README.md
Week07/Demo_Firmware/ESP32_Matrix_Demo/components/shift_reg/: CMakeLists.txt  Kconfig  idf_component.yml  shift_reg.c  shift_reg_asic.c  shift_reg_core.c
Week07/Demo_Firmware/ESP32_Matrix_Demo/components/shift_reg/include/: shift_reg.h  shift_reg_asic.h  shift_reg_core.h
Week07/Demo_Firmware/ESP32_Matrix_Demo/components/shift_reg_led/: CMakeLists.txt  Kconfig  idf_component.yml  shift_reg_led.c  shift_reg_led_asic.c  shift_reg_led_core.c
Week07/Demo_Firmware/ESP32_Matrix_Demo/components/shift_reg_led/include/: shift_reg_led.h  shift_reg_led_asic.h  shift_reg_led_core.h
Week08/: README.md
Week09/: README.md
(+139 files in other folders)
