idf_component_register( SRCS
                        "shift_reg.c"
                        "shift_reg_core.c"
                        "shift_reg_asic.c"
                       
                        INCLUDE_DIRS
                        "include"

                        REQUIRES
                        driver
                        )


