idf_component_register( SRCS
                        "shift_reg_led.c"
                        "shift_reg_led_core.c"
                        "shift_reg_led_asic.c"
                       
                        INCLUDE_DIRS
                        "include"

                        REQUIRES
                        driver
                        )


